--- a/src/components/ExperienceSection.astro
+++ b/src/components/ExperienceSection.astro
@@ -7,7 +7,7 @@ import SRTLogo from "../assets/SRTLogo.jpg";
 
 <section
   id="experience"
-  class="pt-12 sm:pt-8 flex items-center justify-center py-15"
+  class="pt-12 sm:pt-8 flex items-center justify-center py-15 scroll-mt-20"
 >
   <div class="max-w-6xl w-full px-4 sm:px-6">
     <div class="text-center mb-12">
@@ -30,7 +30,7 @@ import SRTLogo from "../assets/SRTLogo.jpg";
           link="https://www.eaton.com/us/en-us.html"
           dates="January 2024 – Present"
           description={`
-            <ul class="list-disc list-inside space-y-2 text-gray-200">
+            <ul class="list-disc list-inside space-y-2">
               <li>Created thousands of USD in savings per device (~$100k per facility)</li>
               <li>Increased manufacturing & operator productivity</li>
               <li>Improved manufacturing & operator efficiency</li>
@@ -39,9 +39,9 @@ import SRTLogo from "../assets/SRTLogo.jpg";
           class={`
             h-full
             group hover:scale-105 transition-transform duration-300
-            bg-gradient-to-br from-gray-800 to-gray-700 rounded-2xl p-8
+            bg-gradient-to-br from-white to-gray-100 dark:from-gray-800 dark:to-gray-700 rounded-2xl p-8
             shadow-lg hover:shadow-2xl
-            transform hover:scale-105 hover:-rotate-1
+            transform hover:-rotate-1
             flex flex-col justify-between
           `}
         />
@@ -55,7 +55,7 @@ import SRTLogo from "../assets/SRTLogo.jpg";
           link="https://bluehalo.com/sr-technologies-is-now-bluehalo/"
           dates="2023 – 2023"
           description={`
-            <ul class="list-disc list-inside space-y-2 text-gray-200">
+            <ul class="list-disc list-inside space-y-2">
               <li>Created a platform to replay captured data</li>
               <li>Built a remote web interface for playback features</li>
               <li>Authored a gRPC server for secure packet transfer</li>
@@ -65,9 +65,9 @@ import SRTLogo from "../assets/SRTLogo.jpg";
           class={`
             h-full
             group hover:scale-105 transition-transform duration-300
-            bg-gradient-to-br from-gray-800 to-gray-700 rounded-2xl p-8
+            bg-gradient-to-br from-white to-gray-100 dark:from-gray-800 dark:to-gray-700 rounded-2xl p-8
             shadow-lg hover:shadow-2xl
-            transform hover:scale-105 hover:-rotate-1
+            transform hover:-rotate-1
             flex flex-col justify-between
           `}
         />
