--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -16,7 +16,6 @@ import "../styles/global.css";
       />
       <div class="absolute inset-0 bg-black/30"></div>
     </div>
-
     <div
       class="relative w-full max-w-md sm:max-w-3xl p-6 sm:p-8 bg-black/10 backdrop-blur-sm rounded-2xl mx-auto sm:mx-0 sm:ml-20"
     >
@@ -28,33 +27,30 @@ import "../styles/global.css";
       <h2
         class="text-base md:text-2xl font-medium mb-8 text-gray-100 text-center sm:text-left leading-relaxed"
       >
-        Floridian Software Developer & Photographer with experience in DoD
-        Contract Software & Electrical Manufacturing Software.<br /><br />
-        I&#39;m a photographer who loves traveling and capturing new places. I hit the
-        gym regularly and spend my free time hanging out with my dog, Jax. I grew
-        up surfing—so the beach is home—and I&#39;ve always had an affinity for computers
-        and tech.
+        Floridian Software Developer &amp; Photographer with experience in DoD
+        Contract Software &amp; Electrical Manufacturing Software.
       </h2>
-
+      <h2 class="text-base md:text-xl font-medium mb-8 text-gray-100 text-center sm:text-left leading-relaxed"> I&#39;m a young guy who loves to travel, program, and capture new places through photography!
+        I hit the gym regularly and spend my free time chasing the perfect shot 📸.
+        I grew up surfing and tinkering on my computer, so the beach and my desk
+        feel like home. I&#39;ve had a passion for technology since I was a kid,
+        and I love the curiosity it constantly inspires in me.</h2>
       <div class="flex flex-col gap-4 w-full sm:flex-row sm:justify-start">
         <a
           href="#experience"
           class="w-full sm:w-auto px-6 py-3 bg-blue-600/90 hover:bg-blue-700 text-white rounded-lg font-medium text-base transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-blue-500/25 backdrop-blur-sm text-center"
+          >Experience</a
         >
-          Experience
-        </a>
         <a
           href="#skills"
           class="w-full sm:w-auto px-6 py-3 bg-blue-400/90 hover:bg-blue-400 text-white rounded-lg font-medium text-base transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-blue-500/25 backdrop-blur-sm text-center"
+          >Skills&#8208;Education</a
         >
-          Skills/Education
-        </a>
-        <a
+        <!-- <a
           href="#gallery"
           class="w-full sm:w-auto px-6 py-3 bg-blue-300/90 hover:bg-blue-300 text-white rounded-lg font-medium text-base transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-blue-400/25 backdrop-blur-sm text-center"
-        >
-          Photography
-        </a>
+          >Photography</a
+        > -->
       </div>
     </div>
   </section>
