--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "aos/dist/aos.css";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 .text-gradient-smooth {
     background: linear-gradient(
       90deg,
