fixed card gaps

--- a/src/components/SkillsSection.astro
+++ b/src/components/SkillsSection.astro
@@ -28,7 +28,7 @@ const skills = [
       </p>
     </div>
 
-    <div class="grid grid-cols-1 gap-6 md:grid-cols-2 mb-16">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
       <ExperienceCard
         logoSrc={flsouthernLogo.src}
         name="Florida Southern College"
@@ -38,7 +38,7 @@ const skills = [
         description={`
           <ul class="list-disc list-inside space-y-2 ">
             <li>Graduated Cum Laude</li>
-            <li>Major coursework: Data Structures, Algorithms, Databases, Software Engineering</li>
+            <li>Major coursework: Data Structures, Algorithms, Databases, Discrete 1-3, Calculus 1-2, AI 1-2</li>
             <li>Senior project: Real-time location based group chats</li>
           </ul>
         `}
@@ -69,7 +69,7 @@ const skills = [
       />
     </div>
 
-    <div class="text-center mb-10 pt-10">
+    <div class="text-center mb-10 mt-15">
       <h3 class="text-3xl font-semibold">Technical Skills</h3>
     </div>
 
