--- a/src/components/ExperienceSection.astro
+++ b/src/components/ExperienceSection.astro
@@ -21,7 +21,7 @@ import SRTLogo from "../assets/SRTLogo.jpg";
       </p>
     </div>
 
-    <div class="grid grid-cols-1 gap-6 md:grid-cols-2 md:gap-12 w-full">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 w-full">
       <div class="experience-card h-full">
         <ExperienceCard
           logoSrc={EatonLogo.src}
